# TrackNetV3

./: .gitignore  CLAUDE.md  dataset.py  datasetv2.py  debt.md  findings.md  predict_frame_sequence.py  progress.md  pyproject.toml  task_plan.md
tools/: build_golf_backgrounds.py  build_roi_clips.py  convert_golf_dataset.py
utils/: visualize.py
xml/: annotations.xml
