[project]
name = "tracknetv3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "dash==2.5.1",
    "numpy==1.23.2",
    "opencv-python==4.4.0.46",
    "pandas==2.0.0",
    "Pillow==10.0.0",
    "plotly==5.8.2",
    "torch==1.10.0",
    "parse",
    "setuptools>=75.3.4",
    "tdqm>=0.0.1",
    "pycocotools>=2.0.7",
]
