[project]
name = "tracknetv3-golf"
version = "0.1.0"
description = "TrackNetV3 adapted for golf ball detection"
requires-python = ">=3.10,<3.11"

dependencies = [
    "dash",
    "numpy<2",
    "opencv-python>=4.7",
    "pandas",
    "pillow",
    "plotly",
    "torch>=2.0",
    "parse",
]

[tool.uv]
package = false